// Copyright 2024 Logan Magee
//
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package accrescent.directory.v1beta1;

import "accrescent/directory/v1beta1/get_app_download_info_request.proto";
import "accrescent/directory/v1beta1/get_app_download_info_response.proto";
import "accrescent/directory/v1beta1/get_app_listing_request.proto";
import "accrescent/directory/v1beta1/get_app_listing_response.proto";
import "accrescent/directory/v1beta1/get_update_info_request.proto";
import "accrescent/directory/v1beta1/get_update_info_response.proto";
import "accrescent/directory/v1beta1/list_app_listings_request.proto";
import "accrescent/directory/v1beta1/list_app_listings_response.proto";

option java_multiple_files = true;
option java_package = "app.accrescent.directory.v1beta1";

// Service providing a directory of all Accrescent apps.
service DirectoryService {
  // Retrieves a single app's listing.
  rpc GetAppListing(GetAppListingRequest) returns (GetAppListingResponse);

  // Retrieves a list of unique app listings.
  rpc ListAppListings(ListAppListingsRequest) returns (ListAppListingsResponse);

  // Retrieves an app's download information
  rpc GetAppDownloadInfo(GetAppDownloadInfoRequest) returns (GetAppDownloadInfoResponse);

  // Retrieves an app's latest update information.
  rpc GetUpdateInfo(GetUpdateInfoRequest) returns (GetUpdateInfoResponse);
}
